# xplain-copilot

./: .gitignore  LICENSE  README.md  SUBMISSION.md  pyproject.toml
assets/: copilot-explain.html  copilot-suggest.html  cover.html  demo.html  record_demo.py  record_walkthrough.py  render_screenshots.py  walkthrough.html
shell/: xplain.bash  xplain.zsh
src/: __init__.py  cli.py  config.py
src/commands/: __init__.py  chat.py  cmd.py  code.py  diff.py  error.py  history.py  pipe.py  wtf.py
src/core/: __init__.py  copilot.py  formatter.py  history_store.py
tests/: __init__.py  test_cli.py
